# Android-Test

./: .project  README.md  build.gradle  settings.gradle  smg.txt  versions.gradle
app/: build.gradle
custom/lua/: build.gradle
custom/network/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
gradles/global/: module.gradle
gradles/util/: blockCheck.groovy  blockCheck.kt
lib/: build.gradle
net/netlib/: build.gradle
plugins/plugin/: build.gradle
remote/: README.md  build.gradle
remote/remote_controller/: remote_cmd_controller.py  remote_gui_controller.py  requirements.txt
remote/remote_server/: remote_server.py
remote/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  HandlerJniHelper.cpp  HandlerJniHelper.hpp  Json.cpp  Json.hpp  RemoteManager.cpp  RemoteManager.hpp  RemoteNative.cpp  ShellMsgHandler.cpp  ShellMsgHandler.hpp  ThreadSafeQueue.hpp  ThreadSafeQueue2.hpp  ThreadSafeQueue3.hpp  TinyXml2.cpp  TinyXml2.hpp  Utils.cpp  Utils.hpp  WSClient.cpp  WSClient.hpp  WebSocket.h  com_liang_example_nativeremote_AbsRemoteMsgHandler.h  com_liang_example_nativeremote_RemoteManager.h
remote_controller/: remote.ui  remote_cmd_controller.py  remote_gui_controller.py
spi/spi_impl1/: build.gradle
spi/spi_impl2/: build.gradle
spi/spi_interface/: build.gradle
ui-ktx/basic-block/: build.gradle
ui-ktx/block/: build.gradle
ui-ktx/json-inflater/: build.gradle
ui-ktx/popup/: build.gradle
ui-ktx/xml-inflater/: build.gradle
ui/block/: build.gradle
ui/json-inflater/: build.gradle
ui/uilib/: build.gradle
utils/: build.gradle
(+633 files in other folders)
